--- a/app/pages/Final/css/style.css
+++ b/app/pages/Final/css/style.css
@@ -2,6 +2,15 @@ body {
 
 }
 
+div a:hover {
+	text-decoration: none;
+	color: #800080;
+	background: #c0c0c0;
+	transition: 0.5s;
+	border-radius: 20px;
+
+}
+
 .start {
 	background:url(../img/Background.png);
 	background-size: cover; 
@@ -48,7 +57,6 @@ body {
 }
 
 .menu-item {
-	display: flex;
 	display: inline-block;
 	padding: 0 38px;
 }
@@ -106,7 +114,7 @@ body {
 
 
 .about-row{
-	justify-content: center;
+	/*justify-content: center;*/
 }
 
 .about-pets-picture {
@@ -116,6 +124,7 @@ body {
 
 .about-description {
 	margin-top: 32px;
+	margin-left: 90px
 }
 
 .about-description h1 {
@@ -127,10 +136,12 @@ body {
 	/* Text style for "A, bout th" */
 	letter-spacing: 2.1px;
 	margin-bottom: 37px;
+	margin-right: 37px;
 }
 
 .pets {
-	margin: 78px 0 68px;
+	padding: 78px 0 68px;
+	background-color: #f6f6f6;
 }
 
 .pets-section-main {
@@ -142,7 +153,7 @@ body {
 	/* Text style for "O, ur frie" */
 	letter-spacing: 2.1px;
 	text-align: center;
-	padding: 0 312px 40px;
+	padding: 0 0 40px;
 }
 
 .pets p {
@@ -171,6 +182,12 @@ body {
 	text-decoration: none;
 	display: inline-block;
 	padding: 10px 44px 13px;
+}
+
+.img-button:hover {
+	background-color: #f1cdb3;
+	color:#292929;
+	border-radius: 26px;
 }
 
 .arrow {
@@ -253,7 +270,13 @@ body {
 }
 
 .donation {
-	margin: 71px 0 84px;
+	background-color:#f6f6f6;
+	padding: 71px 0 84px;
+}
+
+.dog-picture img {
+	width: 505px;
+  	height: 261px;
 }
 
 .donation h1 {
@@ -263,7 +286,7 @@ body {
 	font-weight: 400;
 	line-height: 45px;
 	/* Text style for "I, n addit" */
-	letter-spacing: 2.1px;
+	letter-spacing: 1.4px;
 }
 
 .bank-name {
@@ -326,4 +349,41 @@ body {
   line-height: 2.25;
   text-decoration: none;
   margin-left: 10px;
+}
+
+
+
+/*медиа-запросы*/
+
+@media screen and (max-width: 1020px) {
+	.logo {
+		margin: 0 auto;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.pets-picture {
+		text-align: center;
+	}
+
+	.pets-row {
+		text-align: center;
+	}
+
+	.pets-section-pictures {
+		display: inline-block;
+		margin-top: 25px;
+	}
+}
+
+@media screen and (max-width: 425px) {
+	.menu-items {
+		display: flex;
+		flex-direction: column;
+		float: left;
+	}
+
+	.menu-item {
+		text-align: center;
+	}
 }
